feat: stabilize forklift ERP 0.2.0 rc1